queue overflow layout fix

--- a/benji-client/src/components/Queue/Queue.module.css
+++ b/benji-client/src/components/Queue/Queue.module.css
@@ -54,9 +54,9 @@
   color: var(--clr-btn);
   font-weight: 600;
   box-shadow: none;
-  background: transparent;
+  background: var(--clr-surface1);;
   position: sticky;
-  top: 0;
+  top: -1em;
   left: 0;
   width: 100%;
   height: var(--header-height);
