--- a/benji-client/src/globals.css
+++ b/benji-client/src/globals.css
@@ -43,7 +43,7 @@
   --search-bar-height: 3rem;
 
   --player-width: 350px;
-  --header-height: 2em;
+  --header-height: 3em;
 
   --selection-width: 400px;
   --bar-height: 0.8em;
